--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
-                    <a href="https://github.com/dimoroz772/Linux_CentOS/blob/Website/Ansible_SSH_Access_Manager">
+                    <a href="https://dimoroz772.github.io/Linux_CentOS/Web_Ansible_SSH_Access_Manager.html">
                       <div class="slider--item-image">
                         <img src="assets/img/Ansible.jpg">
                       </div>
