--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </a>
                   </li>
                   <li class="slider--item">
-                    <a href="https://github.com/dimoroz772/Linux_CentOS/blob/Website/Cacti">
+                    <a href="https://dimoroz772.github.io/Linux_CentOS/Web_Cacti.html">
                       <div class="slider--item-image">
                         <img src="assets/img/Cacti.jpg">
                       </div>
