--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     </a>
                   </li>
                   <li class="slider--item">
-                    <a href="https://github.com/dimoroz772/Linux_CentOS/blob/Website/Observium">
+                    <a href="https://dimoroz772.github.io/Linux_CentOS/Web_Observium.html">
                       <div class="slider--item-image">
                         <img src="assets/img/Observium.jpg">
                       </div>
