--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     </a>
                   </li>
                   <li class="slider--item">
-                    <a href="https://github.com/dimoroz772/Linux_CentOS/blob/Website/Install_Zabbix_Server_4.2">
+                    <a href="https://dimoroz772.github.io/Linux_CentOS/Web_Install_Zabbix_Server_4.2.html">
                       <div class="slider--item-image">
                         <img src="assets/img/Zabbix.png">
                       </div>
