--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     </a>
                   </li>
                   <li class="slider--item">
-                    <a href="">
+                    <a href="https://dimoroz772.github.io/Linux_CentOS/Web_Updating_Zabbix_version_from_4.2_to_5.0.html">
                       <div class="slider--item-image">
                         <img src="assets/img/Zabbix.png">
                       </div>
