--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     </a>
                   </li>
                   <li class="slider--item">
-                    <a href="https://github.com/dimoroz772/Linux_CentOS/blob/Website/Install_Zabbix_Server_7.0">
+                    <a href="https://dimoroz772.github.io/Linux_CentOS/Website/Web_Install_Zabbix_Server_7.0.html">
                       <div class="slider--item-image">
                         <img src="assets/img/Zabbix.png">
                       </div>
