--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     </a>
                   </li>
                   <li class="slider--item">
-                    <a href="https://github.com/dimoroz772/Linux_CentOS/blob/Website/Install_Grafana">
+                    <a href="https://dimoroz772.github.io/Linux_CentOS/Web_Install_Grafana.html">
                       <div class="slider--item-image">
                         <img src="assets/img/Grafana.png">
                       </div>
