--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     </a>
                   </li>
                   <li class="slider--item">
-                    <a href="https://github.com/dimoroz772/Linux_CentOS/blob/Website/Installing_Zabbix_plugin_in_Grafana">
+                    <a href="https://dimoroz772.github.io/Linux_CentOS/Web_Installing_Zabbix_plugin_in_Grafana.html">
                       <div class="slider--item-image">
                         <img src="assets/img/Grafana.png">
                       </div>
