--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     </a>
                   </li>
                   <li class="slider--item">
-                    <a href="https://github.com/dimoroz772/Linux_CentOS/blob/Website/Install_GLPI_10.0.6%2BPlugins">
+                    <a href="https://dimoroz772.github.io/Linux_CentOS/Web_Install_GLPI_10.0.6%2BPlugins.html">
                       <div class="slider--item-image">
                         <img src="assets/img/GLPI.png">
                       </div>
