--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
               <div class="work--lockup1">
                 <ul class="slider1">
                   <li class="slider--item1 slider--item-left1">
-                    <a href="https://github.com/dimoroz772/Linux_Fedora/blob/Website/Creating_VLAN_Interfaces">
+                    <a href="https://dimoroz772.github.io/Linux_Fedora/Web_Creating_VLAN_Interfaces.html">
                       <div class="slider--item-image1">
                         <img src="assets/img/VLAN.jpg">
                       </div>
