--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     </a>
                   </li>
                   <li class="slider--item1 slider--item-center1">
-                    <a href="https://github.com/dimoroz772/Linux_Fedora/blob/Website/Conky">
+                    <a href="https://dimoroz772.github.io/Linux_Fedora/Web_conky.html">
                       <div class="slider--item-image1">
                         <img src="assets/img/Conky.jpg">
                       </div>
