--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     </a>
                   </li>
                   <li class="slider--item1 slider--item-right1">
-                    <a href="https://github.com/dimoroz772/Linux_Fedora/blob/Website/Folder_Access_Restriction">
+                    <a href="https://dimoroz772.github.io/Linux_Fedora/Web_Folder_Access_Restriction.html">
                       <div class="slider--item-image1">
                         <img src="assets/img/Folder.png">
                       </div>
