--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                     </a>
                   </li>
                   <li class="slider--item1">
-                    <a href="https://github.com/dimoroz772/Linux_Fedora/blob/Website/Change_the_password_of_the_root_user">
+                    <a href="https://dimoroz772.github.io/Linux_Fedora/Web_Change_the_password_of_the_root_user.html">
                       <div class="slider--item-image1">
                         <img src="assets/img/root.jpg">
                       </div>
