--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                     </a>
                   </li>
                   <li class="slider--item1">
-                    <a href="https://github.com/dimoroz772/Linux_Fedora/blob/Website/System_information">
+                    <a href="https://dimoroz772.github.io/Linux_Fedora/Web_System_information.html">
                       <div class="slider--item-image1">
                         <img src="assets/img/Fedora.jpg">
                       </div>
