--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     </a>
                   </li>
                   <li class="slider--item1">
-                    <a href="https://github.com/dimoroz772/Linux_Fedora/blob/Website/Setting_up_automated_backup_of_active_network_equipment_configurations">
+                    <a href="https://dimoroz772.github.io/Linux_Fedora/Web_Setting_up_automated_backup_of_active_network_equipment_configurations.html">
                       <div class="slider--item-image1">
                         <img src="assets/img/Backup.jpg">
                       </div>
