--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                     </a>
                   </li>
                   <li class="slider--item1">
-                    <a href="https://github.com/dimoroz772/Linux_Fedora/blob/Website/Remote_desktop_in_linux_Fedora">
+                    <a href="https://dimoroz772.github.io/Linux_Fedora/Web_Remote_desktop_in_linux_Fedora.html">
                       <div class="slider--item-image1">
                         <img src="assets/img/RDP.jpg">
                       </div>
