--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                     </a>
                   </li>
                   <li class="slider--item1">
-                    <a href="https://github.com/dimoroz772/Linux_Fedora/blob/Website/RustDesk">
+                    <a href="https://dimoroz772.github.io/Linux_Fedora/Web_RustDesk.html">
                       <div class="slider--item-image1">
                         <img src="assets/img/RustDesk.png">
                       </div>
