--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     </a>
                   </li>
                   <li class="slider--item1">
-                    <a href="https://github.com/dimoroz772/Linux_Fedora/blob/Website/Cockpit">
+                    <a href="https://dimoroz772.github.io/Linux_Fedora/Web_Cockpit.html">
                       <div class="slider--item-image1">
                         <img src="assets/img/Cockpit.png">
                       </div>
