--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                     </a>
                   </li>
                   <li class="slider--item1">
-                    <a href="https://github.com/dimoroz772/Linux_Fedora/blob/Website/GUI_Servers_Connections">
+                    <a href="https://dimoroz772.github.io/Linux_Fedora/Web_GUI_Servers_Connections.html">
                       <div class="slider--item-image1">
                         <img src="assets/img/Fedora.jpg">
                       </div>
