--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                     </a>
                   </li>
                   <li class="slider--item1">
-                    <a href="https://github.com/dimoroz772/Linux_Fedora/blob/Website/Software_that_I_use">
+                    <a href="https://dimoroz772.github.io/Linux_Fedora/Web_Software_that_I_use.html">
                       <div class="slider--item-image1">
                         <img src="assets/img/Fedora.jpg">
                       </div>
