--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                     </a>
                   </li>
                   <li class="slider--item1">
-                    <a href="https://github.com/dimoroz772/Linux_Fedora/blob/Website/Grub-Customizer">
+                    <a href="https://dimoroz772.github.io/Linux_Fedora/Web_Grub-Customizer.html">
                       <div class="slider--item-image1">
                         <img src="assets/img/grubcustomizer.png">
                       </div>
