--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                     </a>
                   </li>
                   <li class="slider--item1">
-                    <a href="https://github.com/dimoroz772/Linux_Fedora/blob/Website/Docker%2BPortainer">
+                    <a href="https://dimoroz772.github.io/Linux_Fedora/Web_Docker%2BPortainer.html">
                       <div class="slider--item-image1">
                         <img src="assets/img/Docker.jpg">
                       </div>
