--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                     </a>
                   </li>
                   <li class="slider--item1">
-                    <a href="https://github.com/dimoroz772/Linux_Fedora/blob/Website/Installing_NetBox_in_Docker">
+                    <a href="https://dimoroz772.github.io/Linux_Fedora/Web_Installing_NetBox_in_Docker.html">
                       <div class="slider--item-image1">
                         <img src="assets/img/NetBox.png">
                       </div>
