--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
               <div class="work--lockup2">
                 <ul class="slider2">
                   <li class="slider--item2 slider--item-left2">
-                    <a href="https://github.com/dimoroz772/Linux_RedOS/blob/Website/Samba_DC">
+                    <a href="https://dimoroz772.github.io/Linux_RedOS/Web_Samba_DC.html">
                       <div class="slider--item-image2">
                         <img src="assets/img/samba.jpg">
                       </div>
