--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                     </a>
                   </li>
                   <li class="slider--item2 slider--item-center2">
-                    <a href="https://github.com/dimoroz772/Linux_RedOS/blob/Website/FreeIPA">
+                    <a href="https://dimoroz772.github.io/Linux_RedOS/Web_FreeIPA.html">
                       <div class="slider--item-image2">
                         <img src="assets/img/FreeIPA.png">
                       </div>
