--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                     </a>
                   </li>
                   <li class="slider--item2 slider--item-right2">
-                    <a href="https://github.com/dimoroz772/Linux_RedOS/blob/Website/Conky">
+                    <a href="https://dimoroz772.github.io/Linux_RedOS/Web_Conky.html">
                       <div class="slider--item-image2">
                         <img src="assets/img/Conky.jpg">
                       </div>
