--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                     </a>
                   </li>
                   <li class="slider--item2">
-                    <a href="https://github.com/dimoroz772/Linux_RedOS/blob/Website/PXE-Server">
+                    <a href="https://dimoroz772.github.io/Linux_RedOS/Website/Web_PXE-Server.html">
                       <div class="slider--item-image2">
                         <img src="assets/img/RedOS.png">
                       </div>
