--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                     </a>
                   </li>
                   <li class="slider--item2">
-                    <a href="https://github.com/dimoroz772/Linux_RedOS/blob/Website/Creating_VLAN_Interfaces">
+                    <a href="https://dimoroz772.github.io/Linux_RedOS/Web_Creating_VLAN_Interfaces.html">
                       <div class="slider--item-image2">
                         <img src="assets/img/RedOS.png">
                       </div>
