--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                     </a>
                   </li>
                   <li class="slider--item2">
-                    <a href="https://github.com/dimoroz772/Linux_RedOS/blob/Website/Install_Zabbix_Server_6.4.9">
+                    <a href="https://dimoroz772.github.io/Linux_RedOS/Web_Install_Zabbix_Server_6.4.9.html">
                       <div class="slider--item-image2">
                         <img src="assets/img/Zabbix.png">
                       </div>
