--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
               <div class="work--lockup3">
                 <ul class="slider3">
                   <li class="slider--item3 slider--item-center3">
-                    <a href="https://github.com/dimoroz772/Linux_ALT/blob/Website/Samba_DC">
+                    <a href="https://dimoroz772.github.io/Linux_ALT/Web_Samba_DC.html">
                       <div class="slider--item-image3">
                         <img src="assets/img/samba.jpg">
                       </div>
