--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
               <div class="work--lockup4">
                 <ul class="slider4">
                   <li class="slider--item4 slider--item-left4">
-                    <a href="https://github.com/dimoroz772/Scripts/blob/Website/Setting_up_automated_backup_of_active_network_equipment_configurations">
+                    <a href="https://dimoroz772.github.io/Scripts/Web_setting_up_automated_backup_of_active_network_equipment_configurations.html">
                       <div class="slider--item-image4">
                         <img src="assets/img/Backup.jpg">
                       </div>
