--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                     </a>
                   </li>
                   <li class="slider--item4 slider--item-center4">
-                    <a href="https://github.com/dimoroz772/Scripts/blob/Website/GUI_Servers_Connections">
+                    <a href="https://dimoroz772.github.io/Scripts/Web_GUI_Servers_Connections.html">
                       <div class="slider--item-image4">
                         <img src="assets/img/bash.png">
                       </div>
