--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
               <div class="work--lockup5">
                 <ul class="slider5">
                   <li class="slider--item5 slider--item-left5">
-                    <a href="https://github.com/dimoroz772/Windows_Upgrade_Or_Install_Keys/blob/Website/Microsoft_Generic_License_Keys_(GVLK)_for_upgrading_server_versions_of_Windows.md">
+                    <a href="https://dimoroz772.github.io/server.html">
                       <div class="slider--item-image5">
                         <img src="assets/img/Windows_Logo.png">
                       </div>
