--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                     </a>
                   </li>
                   <li class="slider--item5 slider--item-center5">
-                    <a href="https://github.com/dimoroz772/Windows_Upgrade_Or_Install_Keys/blob/Website/Microsoft_Generic_License_Keys_(GVLK)_for_upgrading_clients_versions_of_Windows.md">
+                    <a href="https://dimoroz772.github.io/Windows_Upgrade_Or_Install_Keys/client.html">
                       <div class="slider--item-image5">
                         <img src="assets/img/Windows_Red_Logo.png">
                       </div>
