--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
               <div class="work--lockup6">
                 <ul class="slider6">
                   <li class="slider--item6 slider--item-left6">
-                    <a href="https://github.com/dimoroz772/Domain_connection_between_Linux_and_Windows/blob/main/Samba4(RedOS_7.3.2_Server_GUI)_as_second_domain_controller_Windows_Server_2012R2">
+                    <a href="https://dimoroz772.github.io/Domain_connection_between_Linux_and_Windows/Web_Samba4(RedOS_7.3.2_Server_GUI)_as_second_domain_controller_Windows_Server_2012R2.html">
                       <div class="slider--item-image6">
                         <img src="assets/img/WinLin.jpg">
                       </div>
