--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
                     </a>
                   </li>
                   <li class="slider--item6 slider--item-center6">
-                    <a href="https://github.com/dimoroz772/Domain_connection_between_Linux_and_Windows/blob/main/Creating_a_trust_relationship_between_Samba4_domain_controllers(RedOS_7.3.2_Server)_and_Windows_Server_2012R2">
+                    <a href="https://dimoroz772.github.io/Domain_connection_between_Linux_and_Windows/Web_Creating_a_trust_relationship_between_Samba4_domain_controllers(RedOS_7.3.2_Server)_and_Windows_Server_2012R2.html">
                       <div class="slider--item-image6">
                         <img src="assets/img/WinLin.jpg">
                       </div>
