--- a/index.html
+++ b/index.html
@@ -828,11 +828,11 @@
               <div class="work--lockup8">
                 <ul class="slider8">
                   <li class="slider--item8 slider--item-center8">
-                    <a href="#0">
+                    <a href="https://dimoroz772.github.io/My_ideal_software_IT-environment/NetBox/NetBox.html">
                       <div class="slider--item-image8">
-                        <img src="assets/img/magic.jpg">
+                        <img src="assets/img/NetBox.png">
                       </div>
-                      <p class="slider--item-title8">The repository is under development</p>
+                      <p class="slider--item-title8">Netbox is an open source web application for documenting computer networks.</p>
                       <p class="slider--item-description8">&#128578;</p>
                     </a>
                   </li>
