--- a/index.html
+++ b/index.html
@@ -832,8 +832,8 @@
                       <div class="slider--item-image8">
                         <img src="assets/img/NetBox.png">
                       </div>
-                      <p class="slider--item-title8">Netbox is an open source web application for documenting computer networks.</p>
-                      <p class="slider--item-description8">&#128578;</p>
+                      <p class="slider--item-title8">NetBox</p>
+                      <p class="slider--item-description8">Netbox is an open source<br>web application for documenting computer networks.</p>
                     </a>
                   </li>
                 </ul>
