--- a/index.html
+++ b/index.html
@@ -339,6 +339,15 @@
                       <p class="slider--item-description1">Netbox is an open source web application designed for managing and documenting computer networks.</p>
                     </a>
                   </li>
+                  <li class="slider--item1">
+                    <a href="https://dimoroz772.github.io/Linux_Fedora/Web_Installing_HP_drivers_for_printers_and_scans.html">
+                      <div class="slider--item-image1">
+                        <img src="assets/img/HP.jpg">
+                      </div>
+                      <p class="slider--item-title1">Installing HP drivers for printers and scans</p>
+                      <p class="slider--item-description1">For correct interaction between the OS and the HP device.</p>
+                    </a>
+                  </li>
                 </ul>
                 <div class="slider--prev1">
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
