--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                       <div class="slider--item-image1">
                         <img src="assets/img/HP.jpg">
                       </div>
-                      <p class="slider--item-title1">Installing HP drivers for printers and scans</p>
+                      <p class="slider--item-title1">Installing HP drivers for<br>printers and scans</p>
                       <p class="slider--item-description1">For correct interaction between the OS and the HP device.</p>
                     </a>
                   </li>
