--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                   <li class="slider--item1">
                     <a href="https://dimoroz772.github.io/Linux_Fedora/Web_Installing_Nvidia_drivers_for_GPU.html">
                       <div class="slider--item-image1">
-                        <img src="assets/img/Nvidia.jpg">
+                        <img src="assets/img/Nvidia1.jpg">
                       </div>
                       <p class="slider--item-title1">Installing Nvidia drivers for GPU</p>
                       <p class="slider--item-description1">For correct interaction between the OS and Nvidia devices.</p>
