--- a/index.html
+++ b/index.html
@@ -845,13 +845,22 @@
               <h2>My ideal software IT-environment</h2>
               <div class="work--lockup8">
                 <ul class="slider8">
-                  <li class="slider--item8 slider--item-center8">
+                  <li class="slider--item8 slider--item-left8">
                     <a href="https://dimoroz772.github.io/My_ideal_software_IT-environment/NetBox/NetBox.html">
                       <div class="slider--item-image8">
                         <img src="assets/img/NetBox.png">
                       </div>
                       <p class="slider--item-title8">NetBox</p>
                       <p class="slider--item-description8">Netbox is an open source<br>web application for documenting computer networks.</p>
+                    </a>
+                  </li>
+                  <li class="slider--item8 slider--item-center8">
+                    <a href="https://dimoroz772.github.io/My_ideal_software_IT-environment/Zabbix/Zabbix.html">
+                      <div class="slider--item-image8">
+                        <img src="assets/img/Zabbix_logo.png">
+                      </div>
+                      <p class="slider--item-title8">Zabbix</p>
+                      <p class="slider--item-description8">Zabbix is ​​a free monitoring system.</p>
                     </a>
                   </li>
                 </ul>
