--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
                   <li class="slider--item8 slider--item-center8">
                     <a href="https://dimoroz772.github.io/My_ideal_software_IT-environment/Zabbix/Zabbix.html">
                       <div class="slider--item-image8">
-                        <img src="assets/img/Zabbix_logo.png">
+                        <img src="assets/img/Zabbix.png">
                       </div>
                       <p class="slider--item-title8">Zabbix</p>
                       <p class="slider--item-description8">Zabbix is ​​a free monitoring system.</p>
