--- a/index.html
+++ b/index.html
@@ -161,6 +161,15 @@
                     </a>
                   </li>
                   <li class="slider--item">
+                    <a href="https://dimoroz772.github.io/Linux_CentOS/Web_Install_Zabbix_Server_7.0.html">
+                      <div class="slider--item-image">
+                        <img src="assets/img/Zabbix.png">
+                      </div>
+                      <p class="slider--item-title">Transferring DB from Zabbix 7.0.0beta1 to Zabbix 7.0 LTS</p>
+                      <p class="slider--item-description">Zabbix is a free system for monitoring the status of various computer network services, servers and network equipment.</p>
+                    </a>
+                  </li>
+                  <li class="slider--item">
                     <a href="https://dimoroz772.github.io/Linux_CentOS/Web_Install_Grafana.html">
                       <div class="slider--item-image">
                         <img src="assets/img/Grafana.png">
