--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     </a>
                   </li>
                   <li class="slider--item">
-                    <a href="https://dimoroz772.github.io/Linux_CentOS/Web_Install_Zabbix_Server_7.0.html">
+                    <a href="https://dimoroz772.github.io/Linux_CentOS/Web_Transferring_DB_from_Zabbix_7.0.0beta1_to_Zabbix_7.0_LTS.html">
                       <div class="slider--item-image">
                         <img src="assets/img/Zabbix.png">
                       </div>
