--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                       <div class="slider--item-image">
                         <img src="assets/img/Zabbix.png">
                       </div>
-                      <p class="slider--item-title">Transferring DB from Zabbix 7.0.0beta1 to Zabbix 7.0 LTS</p>
+                      <p class="slider--item-title">Transferring DB from Zabbix 7.0.0beta1<br>to Zabbix 7.0 LTS</p>
                       <p class="slider--item-description">Zabbix is a free system for monitoring the status of various computer network services, servers and network equipment.</p>
                     </a>
                   </li>
