--- a/index.html
+++ b/index.html
@@ -438,6 +438,15 @@
                     </a>
                   </li>
                   <li class="slider--item2">
+                    <a href="https://dimoroz772.github.io/Linux_RedOS/Web_Creating_VLAN_Interfaces.html">
+                      <div class="slider--item-image2">
+                        <img src="assets/img/RAID.png">
+                      </div>
+                      <p class="slider--item-title2">Creating RAID</p>
+                      <p class="slider--item-description2">AVAGO MegaRAID SAS 9460-16i.</p>
+                    </a>
+                  </li>
+                  <li class="slider--item2">
                     <a href="https://dimoroz772.github.io/Linux_RedOS/Web_Install_Zabbix_Server_6.4.9.html">
                       <div class="slider--item-image2">
                         <img src="assets/img/Zabbix.png">
