--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="shortcut icon" href="assets/img/logo1.png" type="image/png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="X-UA-Compatible" content="IT">
   <meta name="description" content="Knowledge base">
   <meta name="keywords" content="global, template, html, sass, jquery">
   <meta name="author" content="Dmitriy Morozov">
