--- a/index.html
+++ b/index.html
@@ -911,7 +911,7 @@
                   </div>
                   <ul class="modal--options">
                     <li><a href="https://github.com/dimoroz772">GitHub</a></li>
-                    <li><a href="mailto:dimoroz77@gmail.com">Write me</a></li>
+                    <li><a href="mailto:dmitriy-delo@yandex.ru">Write me</a></li>
                   </ul>
                 </div>
               </div>
