--- a/index.html
+++ b/index.html
@@ -534,6 +534,15 @@
                       <p class="slider--item-description4">GUI Servers Connections is a script I wrote in bash, which is designed to quickly connect to servers.</p>
                     </a>
                   </li>
+                  <li class="slider--item4 slider--item-right4">
+                    <a href="https://dimoroz772.github.io/Scripts/Web_turning_off_server_equipment_using_network_protocols.html">
+                      <div class="slider--item-image4">
+                        <img src="assets/img/bash.png">
+                      </div>
+                      <p class="slider--item-title4">Turning off server <br> equipment using <br> network protocols</p>
+                      <p class="slider--item-description4">This is a script I wrote in bash. It is designed to quickly shut down servers.</p>
+                    </a>
+                  </li>
                 </ul>
                 <div class="slider--prev4">
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
