--- a/index.html
+++ b/index.html
@@ -447,6 +447,15 @@
                     </a>
                   </li>
                   <li class="slider--item2">
+                    <a href="https://dimoroz772.github.io/Linux_RedOS/Web_Authorization_ssh-key_on_the_operating_system_Linux_RedOS_8.0.html">
+                      <div class="slider--item-image2">
+                        <img src="assets/img/ssh.png">
+                      </div>
+                      <p class="slider--item-title2">Authorization ssh-key</p>
+                      <p class="slider--item-description2">Authorization via ssh key on Linux and Windows</p>
+                    </a>
+                  </li>
+                  <li class="slider--item2">
                     <a href="https://dimoroz772.github.io/Linux_RedOS/Web_Install_Zabbix_Server_6.4.9.html">
                       <div class="slider--item-image2">
                         <img src="assets/img/Zabbix.png">
