--- a/index.html
+++ b/index.html
@@ -452,7 +452,16 @@
                         <img src="assets/img/ssh.png">
                       </div>
                       <p class="slider--item-title2">Authorization ssh-key</p>
-                      <p class="slider--item-description2">Authorization via ssh key on Linux and Windows</p>
+                      <p class="slider--item-description2">Authorization via ssh key on Linux and Windows.</p>
+                    </a>
+                  </li>
+                  <li class="slider--item2">
+                    <a href="https://dimoroz772.github.io/Linux_RedOS/blob/Website/Web_Local_repositories_for_RedOS_7_and_RedOS_8.html">
+                      <div class="slider--item-image2">
+                        <img src="assets/img/RedOS.png">
+                      </div>
+                      <p class="slider--item-title2">Local repositories</p>
+                      <p class="slider--item-description2">Example for RedOS 7 and RedOS 8 repositories.</p>
                     </a>
                   </li>
                   <li class="slider--item2">
