--- a/index.html
+++ b/index.html
@@ -322,6 +322,15 @@
                     </a>
                   </li>
                   <li class="slider--item1">
+                    <a href="https://dimoroz772.github.io/Linux_Fedora/Web_Creating_a_binary_script.html">
+                      <div class="slider--item-image1">
+                        <img src="assets/img/Fedora.jpg">
+                      </div>
+                      <p class="slider--item-title1">Creating a binary script</p>
+                      <p class="slider--item-description1">Binary scripts are created for a specific version glibc..</p>
+                    </a>
+                  </li>
+                  <li class="slider--item1">
                     <a href="https://dimoroz772.github.io/Linux_Fedora/Web_Grub-Customizer.html">
                       <div class="slider--item-image1">
                         <img src="assets/img/grubcustomizer.png">
