--- a/index.html
+++ b/index.html
@@ -561,6 +561,15 @@
                       <p class="slider--item-description4">GUI Servers Connections is a script I wrote in bash, which is designed to quickly connect to servers.</p>
                     </a>
                   </li>
+                  <li class="slider--item4">
+                    <a href="https://dimoroz772.github.io/Scripts/Web_Checking_packages_for_integrity_and_authenticity.html">
+                      <div class="slider--item-image4">
+                        <img src="assets/img/bash.png">
+                      </div>
+                      <p class="slider--item-title4">Web Checking packages<br>for integrity and<br>authenticity</p>
+                      <p class="slider--item-description4">Designed for local repositories.</p>
+                    </a>
+                  </li>
                   <li class="slider--item4 slider--item-right4">
                     <a href="https://dimoroz772.github.io/Scripts/Web_turning_off_server_equipment_using_network_protocols.html">
                       <div class="slider--item-image4">
