--- a/index.html
+++ b/index.html
@@ -161,6 +161,15 @@
                     </a>
                   </li>
                   <li class="slider--item">
+                    <a href="https://dimoroz772.github.io/Linux_CentOS/Web_Upgrade_Zabbix_7.0_to_Zabbix_7.2.3.html">
+                      <div class="slider--item-image">
+                        <img src="assets/img/Zabbix.png">
+                      </div>
+                      <p class="slider--item-title">Upgrade Zabbix 7.0 to Zabbix 7.2.3</p>
+                      <p class="slider--item-description">Zabbix is a free system for monitoring the status of various computer network services, servers and network equipment.</p>
+                    </a>
+                  </li>
+                  <li class="slider--item">
                     <a href="https://dimoroz772.github.io/Linux_CentOS/Web_Transferring_DB_from_Zabbix_7.0.0beta1_to_Zabbix_7.0_LTS.html">
                       <div class="slider--item-image">
                         <img src="assets/img/Zabbix.png">
