--- a/index.html
+++ b/index.html
@@ -554,12 +554,12 @@
               <div class="work--lockup4">
                 <ul class="slider4">
                   <li class="slider--item4 slider--item-center4">
-                    <a href="https://dimoroz772.github.io/Linux_ALT/Web_Samba_DC.html">
+                    <a href="https://dimoroz772.github.io/Linux_Astra/Web_Local_repository.html">
                       <div class="slider--item-image4">
                         <img src="assets/img/samba.jpg">
                       </div>
-                      <p class="slider--item-title4">Samba DC</p>
-                      <p class="slider--item-description4">Using Samba 4 as an Active Directory domain controller.</p>
+                      <p class="slider--item-title4">Local repository</p>
+                      <p class="slider--item-description4">Configuring a server with local repositories.</p>
                     </a>
                   </li>
                 </ul>
