--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
                   <li class="slider--item4 slider--item-center4">
                     <a href="https://dimoroz772.github.io/Linux_Astra/Web_Local_repository.html">
                       <div class="slider--item-image4">
-                        <img src="assets/img/samba.jpg">
+                        <img src="assets/img/A-Logo.png">
                       </div>
                       <p class="slider--item-title4">Local repository</p>
                       <p class="slider--item-description4">Configuring a server with local repositories.</p>
