--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
                         <img src="assets/img/A2-Logo.jpg">
                       </div>
                       <p class="slider--item-title4">Local repository</p>
-                      <p class="slider--item-description4">Configuring a server with local repositories</p>
+                      <p class="slider--item-description4">Configuring a server with local repositories.</p>
                     </a>
                   </li>
                 </ul>
