--- a/index.html
+++ b/index.html
@@ -484,6 +484,15 @@
                     </a>
                   </li>
                   <li class="slider--item2">
+                    <a href="https://dimoroz772.github.io/Linux_RedOS/Web_Repositories_outside_software.html">
+                      <div class="slider--item-image2">
+                        <img src="assets/img/RedOS.png">
+                      </div>
+                      <p class="slider--item-title2">Repositories outside software</p>
+                      <p class="slider--item-description2">Example of creating third-party repositories for RedOS 7 and RedOS 8</p>
+                    </a>
+                  </li>
+                  <li class="slider--item2">
                     <a href="https://dimoroz772.github.io/Linux_RedOS/Web_Install_Zabbix_Server_6.4.9.html">
                       <div class="slider--item-image2">
                         <img src="assets/img/Zabbix.png">
