--- a/index.html
+++ b/index.html
@@ -368,6 +368,15 @@
                     </a>
                   </li>
                   <li class="slider--item1">
+                    <a href="https://dimoroz772.github.io/Linux_Fedora/Web_VPN_WireGuard.html">
+                      <div class="slider--item-image1">
+                        <img src="assets/img/NetBox.png">
+                      </div>
+                      <p class="slider--item-title1">VPN WireGuard</p>
+                      <p class="slider--item-description1">Setting up a VPN server.</p>
+                    </a>
+                  </li>
+                  <li class="slider--item1">
                     <a href="https://dimoroz772.github.io/Linux_Fedora/Web_Installing_HP_drivers_for_printers_and_scans.html">
                       <div class="slider--item-image1">
                         <img src="assets/img/HP.jpg">
