--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                   <li class="slider--item1">
                     <a href="https://dimoroz772.github.io/Linux_Fedora/Web_VPN_WireGuard.html">
                       <div class="slider--item-image1">
-                        <img src="assets/img/NetBox.png">
+                        <img src="assets/img/WG.png">
                       </div>
                       <p class="slider--item-title1">VPN WireGuard</p>
                       <p class="slider--item-description1">Setting up a VPN server.</p>
