--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <li><span>DCBLaW</span></li>
             <li><span>DDT4ALL</span></li>
             <li><span>My_IS_IT-environment</span></li>
+            <li><span>Cheat_sheet</span></li>
             <li><span>My contacts</span></li>
           </ul>
         </nav>
