--- a/index.html
+++ b/index.html
@@ -503,6 +503,15 @@
                     </a>
                   </li>
                   <li class="slider--item2">
+                    <a href="https://dimoroz772.github.io/Linux_RedOS/Web_Build_RPM-package+creating_a_repository.html">
+                      <div class="slider--item-image2">
+                        <img src="assets/img/RedOS.png">
+                      </div>
+                      <p class="slider--item-title2">Build_RPM-package+creating_a_repository</p>
+                      <p class="slider--item-description2">Create your own RPM package + repository</p>
+                    </a>
+                  </li>
+                  <li class="slider--item2">
                     <a href="https://dimoroz772.github.io/Linux_RedOS/Web_Install_Zabbix_Server_6.4.9.html">
                       <div class="slider--item-image2">
                         <img src="assets/img/Zabbix.png">
