--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                       <div class="slider--item-image2">
                         <img src="assets/img/RedOS.png">
                       </div>
-                      <p class="slider--item-title2">Build RPM-package+creating a repository</p>
+                      <p class="slider--item-title2">Build RPM-package</p>
                       <p class="slider--item-description2">Create your own RPM package + repository</p>
                     </a>
                   </li>
