--- a/index.html
+++ b/index.html
@@ -512,6 +512,15 @@
                     </a>
                   </li>
                   <li class="slider--item2">
+                    <a href="https://dimoroz772.github.io/Linux_RedOS/Web_Manifests.html">
+                      <div class="slider--item-image2">
+                        <img src="assets/img/RedOS.png">
+                      </div>
+                      <p class="slider--item-title2">Manifests</p>
+                      <p class="slider--item-description2">Created for the combination Foreman + Puppet</p>
+                    </a>
+                  </li>
+                  <li class="slider--item2">
                     <a href="https://dimoroz772.github.io/Linux_RedOS/Web_Install_Zabbix_Server_6.4.9.html">
                       <div class="slider--item-image2">
                         <img src="assets/img/Zabbix.png">
